[package]
name = 'cec-rs'
# Do note msrv setting in clippy.toml as well
rust-version = "1.56.1"
version = "7.1.0"
authors = ['Sami Salonen']
edition = '2021'
license = 'GPL-2.0'
description = 'Thin but safe wrapper for libcec'
documentation = 'https://docs.rs/cec-rs'
readme = 'README.md'
include = ['/README.md', '/LICENSE', '/Cargo.toml', '/src/*.rs', 'build.rs']
keywords = ['libcec', 'cec', 'hdmi']
categories = ['api-bindings']
homepage = 'https://github.com/ssalonen/cec-rs'
repository = 'https://github.com/ssalonen/cec-rs'
build = 'build.rs'

[dependencies]
arrayvec = '0.7.1'
log = '0.4'
derive_builder = '0.10.2'
num-traits = '0.2.14'

[dependencies.libcec-sys]
version = '4.0.0'

[dependencies.enum-repr-derive]
version = '0.2.0'

[badges.maintenance]
status = 'passively-maintained'
